<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="label_text">How to Play</string>
    <string name="hint_text">Just figure it out. It\'s not that complicated.</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>
