<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button" app:layout_constraintStart_toEndOf="@+id/yellow_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/red_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/green_button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/label_text"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0" android:layout_marginTop="16dp" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp" android:id="@+id/box_one_text"
            android:fontFamily="@font/roboto_mono_thin" style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="@dimen/box_two_size"
            android:layout_height="@dimen/box_two_size"
            android:id="@+id/box_two_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAlignment="center" style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text"
            style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/hint_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hint_text" android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/label_text"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/box_five_text"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_five_text"
            app:layout_constraintVertical_bias="0.100000024"/>
    <TextView
            android:text="@string/label_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_text" android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/hint_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>